# darqube-test-task

./: .gitignore  Dockerfile  README.md  app.py  conf.py  main.py  pyproject.toml  site.conf  start.sh  supervisord.conf
controllers/: models.py  names.py  users.py
front/: package-lock.json  package.json
front/src/: App.js
front/src/components/: constants.js
front/src/services/: authService.js  fetchData.js  subscriptionsService.js
makeflows/: flow_server.py  generate_flows.py
