[tool.poetry]
name = "darqube"
version = "0.1.0"
description = ""
authors = ["VasiliyBologov <vasiliybologov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
click = "^7.1.2"
uvicorn = "^0.13.4"
websockets = "^8.1"
mongoengine = "^0.23.0"
fastapi-users = "^6.0.0"
fastapi-login = "^1.6.0"
supervisor = "^4.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
